crates/pg_syntax/tests/snapshots/postgres_regress/create_role@23.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE DATABASE regress_nosuch_db;
---
CreatedbStmt@0..34
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Database@7..15 "DATABASE"
  Whitespace@15..16 " "
  Ident@16..33 "regress_nosuch_db"
  Ascii59@33..34 ";"

