crates/pg_syntax/tests/snapshots/postgres_regress/create_role@28.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE tenant_table (i integer);
---
CreateStmt@0..38
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..25
    Ident@13..25 "tenant_table"
  Whitespace@25..26 " "
  Ascii40@26..27 "("
  ColumnDef@27..36
    Ident@27..28 "i"
    Whitespace@28..29 " "
    TypeName@29..36
      Integer@29..36 "integer"
  Ascii41@36..37 ")"
  Ascii59@37..38 ";"

