crates/pg_syntax/tests/snapshots/postgres_regress/create_role@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE INDEX tenant_idx ON tenant_table(i);
---
IndexStmt@0..43
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Index@7..12 "INDEX"
  Whitespace@12..13 " "
  Ident@13..23 "tenant_idx"
  Whitespace@23..24 " "
  On@24..26 "ON"
  Whitespace@26..27 " "
  RangeVar@27..39
    Ident@27..39 "tenant_table"
  Ascii40@39..40 "("
  IndexElem@40..41
    Ident@40..41 "i"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

