crates/pg_syntax/tests/snapshots/postgres_regress/create_role@30.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE VIEW tenant_view AS SELECT * FROM pg_catalog.pg_class;
---
ViewStmt@0..61
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  View@7..11 "VIEW"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "tenant_view"
  Whitespace@23..24 " "
  As@24..26 "AS"
  Whitespace@26..27 " "
  SelectStmt@27..60
    Select@27..33 "SELECT"
    Whitespace@33..34 " "
    ResTarget@34..35
      ColumnRef@34..35
        AStar@34..35
          Ascii42@34..35 "*"
    Whitespace@35..36 " "
    From@36..40 "FROM"
    Whitespace@40..41 " "
    RangeVar@41..60
      Ident@41..51 "pg_catalog"
      Ascii46@51..52 "."
      Ident@52..60 "pg_class"
  Ascii59@60..61 ";"

